[package]
name = "crane"
version = "0.1.0"
authors = ["jianliangw1@gmail.com"]
edition = "2021"

[dependencies]
crane_derive = { path = "crane_derive"}
clap = { version = "4.1.6", features = ["derive"] }
pyo3 = "0.15"
log = "0.4.0"
env_logger = "0.9.0"
exitcode = "1.1.2"
futures = "0.3"
async-trait = "0.1.68"
lazy_static = "1.4.0"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
