[package]
name = "crane"
version = "0.1.0"
authors = ["jianliangw1@gmail.com"]
edition = "2021"

[dependencies]
crane_derive = { path = "crane_derive"}
clap = { version = "4.1.6", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
exitcode = "1.1.2"
futures = "0.3"
async-trait = "0.1.68"
lazy_static = "1.4.0"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
git2 = "0.17.2"
base64 = "0.21.3"
url = "2.4.1"
tempdir = "0.3.7"
home = "0.5.5"
rustpython-vm = "0.3.0"
malachite-bigint = { version = "=0.1.0" }
malachite-q = "=0.3.2"
malachite-base = "=0.3.2"
rustpython = "0.3.0"
colored = "2.0.4"
walkdir = "2.4.0"
tempfile = "3.8.1"
anyhow = "1.0.75"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dev-dependencies]
assert_fs = "1.0.13"
assert_cmd = "2.0.12"
predicates = "3.0.4"
test-log = "0.2.13"
